--- a/css/footer.css
+++ b/css/footer.css
@@ -135,10 +135,11 @@
 .footer_link::before {
   content: "";
   display: block;
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   margin: 0 20px 0 0;
   background-color: #1e1e1e;
+  border-right: solid 3px #fff;
 }
 
 .footer_svg img {
