--- a/css/start.css
+++ b/css/start.css
@@ -41,3 +41,61 @@
   margin: 0 auto 40px auto;
   border-bottom: 2px solid #e90000;
 }
+
+.more_padding {
+  padding: 80px 0;
+}
+
+.more_title {
+  background-color: #1e1e1e;
+  display: block;
+  padding: 8px 10px;
+  margin: 0 0 20px 0;
+  border-bottom: 3px solid #dfb85d;
+  font-weight: 800;
+  color: rgb(255, 255, 255);
+}
+
+.footer_contacts_background {
+  background-color: #1e1e1e;
+  padding: 20px;
+  margin: 0 0 10px 0;
+}
+
+.more_contacts_list:not(:first-child) {
+  margin: 20px 0 0 0;
+}
+
+.more_contacts_list::after {
+  content: "";
+  display: flex;
+  width: 100%;
+  border-bottom: 1px dashed rgb(255 255 255 / 50%);
+}
+
+.footer_contacts {
+  display: flex;
+  margin: 0 0 10px 0;
+  align-items: flex-start;
+  color: rgb(255, 255, 255);
+}
+
+.technology_button {
+  background-color: #e90000;
+  color: #fff;
+  width: 100%;
+  padding: 15px 0;
+  font-weight: 800;
+  border-radius: 4px;
+  margin: 0 auto;
+  display: block;
+}
+
+.postcards_background {
+  background-color: #1e1e1e;
+}
+
+.postcards_img {
+  margin: 0 auto;
+  display: block;
+}
