--- a/css/footer.css
+++ b/css/footer.css
@@ -142,6 +142,18 @@
   border-right: solid 3px #fff;
 }
 
+@media screen and (min-width: 970px) {
+  .footer_link::before {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin: 0 20px 0 0;
+    background-color: #1e1e1e;
+    border-right: solid 3px #fff;
+  }
+}
+
 .footer_svg img {
   width: 16px;
   display: flex;
@@ -181,6 +193,7 @@
   font-weight: 800;
   color: #dfb85d;
   margin: 0 0 0 5px;
+  white-space: nowrap;
 }
 
 .footer_contacts {
