--- a/css/global.css
+++ b/css/global.css
@@ -89,6 +89,14 @@
   overflow: hidden;
 }
 
+.scroll {
+  display: none;
+}
+
+.is-scroll {
+  display: block;
+}
+
 .modal_padding {
   padding: 0 15px;
 }
@@ -183,4 +191,61 @@
 .below_img {
   width: inherit;
   transform: rotate(-90deg) translate(-5%, 0);
+}
+
+.mySlides {
+  display: none;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: rgb(255 255 255 / 80%);
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: #1e1e1eca;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #dfb85d;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {
+    font-size: 11px;
+  }
 }
