--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@
   padding: 40px 0 20px 0;
 }
 
-@media screen and (min-width: 1165px) {
+@media screen and (min-width: 970px) {
   .hero_padding {
     padding: 80px 0;
   }
@@ -312,6 +312,7 @@
 .benefits_link {
   display: flex;
   align-items: center;
+  font-size: 12px;
 }
 
 @media screen and (min-width: 970px) {
@@ -346,6 +347,14 @@
   margin: 0 0 80px 0;
 }
 
+@media screen and (min-width: 970px) {
+  .question_content {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+}
+
 .question_title {
   text-align: center;
   font-weight: 800;
@@ -373,12 +382,55 @@
   width: 80px;
 }
 
-.question_title_sentence:not(:last-child) {
+.question_title_sentence {
+  border-radius: 8px;
+}
+
+.question_title_sentence[math="q-1"] {
   margin: 0 0 20px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .question_title_sentence[math="q-1"] {
+    width: 49%;
+  }
+}
+
+.question_title_sentence[math="q-2"] {
+  margin: 0 0 20px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .question_title_sentence[math="q-2"] {
+    width: 49%;
+  }
+}
+
+@media screen and (min-width: 970px) {
+  .question_title_sentence[math="q-3"] {
+    width: 100%;
+  }
+
+  .question_title_sentence[math="q-3"] > a > .question_title_category {
+    padding: 100px 0 120px 0;
+  }
 }
 
 .resource_sentence_box {
   margin: 0 0 60px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence_box {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence_text {
+    margin: 0 auto;
+    width: 90%;
+  }
 }
 
 .resource_supptitle {
@@ -386,6 +438,12 @@
   text-align: center;
   margin: 0 0 80px 0;
   display: block;
+}
+
+@media screen and (min-width: 1165px) {
+  .resource_supptitle {
+    font-size: 16px;
+  }
 }
 
 .resource_content {
