--- a/css/learn.css
+++ b/css/learn.css
@@ -1,154 +1,38 @@
-.learn_padding {
-  padding: 40px 0;
+.technology_padding {
+  padding: 40px 0 0 0;
 }
 
-.learn_drop_padding {
-  padding: 40px 0 80px 0;
+@media screen and (min-width: 970px) {
+  .technology_padding {
+    padding: 120px 0 80px 0;
+  }
 }
 
-.learn_title {
+.technology_title {
   font-size: 26px;
   color: #dfb85d;
   text-transform: uppercase;
   text-align: center;
 }
 
-.learn_title::after {
+.technology_title::after {
   content: "";
   display: flex;
   width: 80%;
-  margin: 0 auto 20px auto;
+  margin: 0 auto 40px auto;
   border-bottom: 2px solid #e90000;
 }
 
-.learn_supptitle {
+.technology_text {
   line-height: 1.5;
   color: rgb(255 255 255 / 70%);
-  text-align: center;
-}
-
-.learn_supptitle_form {
-  line-height: 1.5;
-  color: rgb(255 255 255 / 70%);
-  text-align: center;
-  margin: 0 0 60px 0;
-}
-
-.learn_icon {
-  color: rgba(255, 255, 255, 0.5);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.learn_icon_svg {
-  transform: rotate(90deg);
-}
-
-.learn_background {
-  background-color: #000;
-}
-
-.learn_drop_title {
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 28px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin: 0 0 40px 0;
-}
-
-.learn_drop_list {
-  width: 90%;
-  display: block;
-  margin: 0 auto;
-}
-
-.learn_drop_list_text {
-  font-weight: 800;
-  color: rgb(255, 255, 255);
-  font-size: 12px;
+  text-align: center;
   width: 70%;
+  margin: 0 auto 60px auto;
 }
 
-.learn_drop_list_supptext {
-  color: #dfb85d;
-}
-
-.learn_drop_list_icon {
-  display: flex;
-  align-items: center;
-}
-
-.learn_drop_list_icon::before {
-  content: "";
-  display: block;
-  width: 50px;
-  height: 50px;
-  margin: 0 20px 0 0;
-  background-color: #1e1e1e;
-  border: solid 2px #dfb85d;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-.learn_drop_box {
-  display: block;
-  width: 100%;
-  margin: 0 0 40px 0;
-}
-
-.learn_drop_img {
-  width: inherit;
-}
-
-.learn_drop_input {
-  border: solid 2px #1e1e1e;
-  border-radius: 4px;
-  display: flex;
-  margin: 0 0 20px 0;
-}
-
-.learn_drop_button {
-  background-color: #e90000;
-  color: #fff;
-  width: 100%;
-  padding: 20px 0;
-  font-weight: 800;
-  border-radius: 4px;
-}
-
-.learn_join_background {
-  background-color: #1e1e1eca;
-}
-
-.learn_join_padding {
-  padding: 100px 0;
-}
-
-.learn_join_title {
-  font-size: 18px;
-  color: #dfb85d;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.learn_join_title::after {
-  content: "";
-  display: flex;
-  width: 80%;
-  margin: 0 auto 20px auto;
-  border-bottom: 2px solid #e90000;
-}
-
-.learn_join_text {
-  color: rgba(255, 255, 255, 0.5);
-  font-size: 18px;
-  text-align: center;
-  margin: 0 0 40px 0;
-}
-
-.learn_join_button {
+.technology_button {
   background-color: #e90000;
   color: #fff;
   width: 100%;
@@ -157,4 +41,264 @@
   border-radius: 4px;
   margin: 0 auto;
   display: block;
+}
+
+@media screen and (min-width: 970px) {
+  .technology_button {
+    padding: 15px 30px;
+  }
+}
+
+.technology_sentence:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .technology_sentence:not(:last-child) {
+    margin: 0 10px 0 0;
+  }
+
+  .technology_sentence {
+    display: flex;
+  }
+}
+
+.technology_category {
+  background-color: #1e1e1eca;
+  border-radius: 8px;
+  padding: 40px 30px 60px 30px;
+}
+
+.technology_category_title {
+  color: #dfb85d;
+}
+
+.technology_list {
+  margin: 0 0 60px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .technology_list {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.resource_sentence_box {
+  margin: 0 0 20px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence_box {
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1165px) {
+  .resource_sentence_box {
+    justify-content: space-between;
+  }
+}
+
+.resource_sentence {
+  display: flex;
+  flex-direction: column;
+  background-color: #1e1e1eca;
+  padding: 60px 15px;
+  border-radius: 8px;
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence {
+    padding: 60px 30px;
+  }
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence {
+    width: 40%;
+  }
+
+  .resource_sentence:last-child {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+.resource_sentence:not(:last-child) {
+  margin: 0 0 20px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence:not(:last-child) {
+    margin: 0 0 20px 0;
+  }
+}
+
+@media screen and (min-width: 1165px) {
+  .resource_sentence {
+    padding: 60px 35px;
+  }
+}
+
+.resource_sentence_box_img {
+  border: #dfb85d solid 3px;
+  border-radius: 50%;
+  padding: 20px;
+  margin: 0 auto 20px auto;
+}
+
+.resource_sentence_img {
+  width: 80px;
+  opacity: 20%;
+}
+
+.resource_sentence_box_title {
+  color: rgb(255 255 255 / 80%);
+  text-align: center;
+  line-height: 1.5;
+}
+
+.resource_sentence_title {
+  font-weight: 800;
+  color: #fff;
+}
+
+.technology_text_support {
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.5;
+  color: rgb(255 255 255 / 70%);
+  margin: 80px 0 40px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .technology_text_support {
+    width: 70%;
+    margin: 0 0 40px 0;
+  }
+}
+
+.more_title {
+  background-color: #1e1e1e;
+  display: block;
+  padding: 8px 10px;
+  margin: 0 0 20px 0;
+  border-bottom: 3px solid #dfb85d;
+  font-weight: 800;
+  color: rgb(255, 255, 255);
+}
+
+.more_contacts_list:not(:first-child) {
+  margin: 20px 0 0 0;
+}
+
+.more_contacts_list::after {
+  content: "";
+  display: flex;
+  width: 100%;
+  border-bottom: 1px dashed rgb(255 255 255 / 50%);
+}
+
+.more_padding {
+  padding: 80px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .more_padding {
+    padding: 0;
+  }
+}
+
+.more_desktop {
+}
+
+@media screen and (min-width: 970px) {
+  .more_desktop {
+    display: none;
+  }
+}
+
+.technology_button_get {
+  background-color: #e90000;
+  color: #fff;
+  width: 100%;
+  padding: 15px 0;
+  font-weight: 800;
+  border-radius: 4px;
+  margin: 0 auto;
+  display: block;
+}
+
+@media screen and (min-width: 970px) {
+  .technology_button_get {
+    width: 70%;
+    margin: 0 auto 0 0;
+  }
+}
+
+.postcards_background {
+  background-color: #1e1e1e;
+}
+
+.postcards_img {
+  margin: 0 auto;
+  display: block;
+}
+
+@media screen and (min-width: 970px) {
+  .sales_desktop {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .sales_desktop_menu {
+    width: 28.5%;
+  }
+}
+
+.menu_sentence:not(:last-child) {
+  margin: 0 0 20px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .menu_sentence {
+    width: 100%;
+  }
+}
+
+.menu_button {
+  background-color: #e90000;
+  color: #fff;
+  width: 100%;
+  padding: 15px 0;
+  font-weight: 800;
+  border-radius: 4px;
+  margin: 0 auto;
+  display: block;
+}
+
+@media screen and (min-width: 970px) {
+  .menu_button {
+    width: inherit;
+  }
+}
+
+.resource_cicle_sentence_text_final {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 24px;
+  margin: 0 0 20px 0;
+  text-align: center;
+}
+
+.resource_cicle_sentence_supptext_final {
+  color: #dfb85d;
+  font-size: 24px;
+  font-weight: 800;
 }
