--- a/css/start.css
+++ b/css/start.css
@@ -1,40 +1,21 @@
-.start_padding {
+.technology_padding {
   padding: 40px 0 0 0;
 }
 
-.resource_sentence_text_final {
-  color: #fff;
-  font-size: 16px;
-  font-weight: 400;
-  text-transform: capitalize;
-  line-height: 24px;
-  text-align: center;
-  margin: 0 0 20px 0;
+@media screen and (min-width: 970px) {
+  .technology_padding {
+    padding: 120px 0 80px 0;
+  }
 }
 
-.resource_sentence_supptext_final {
-  color: #dfb85d;
-  font-size: 24px;
-  font-weight: 800;
-}
-
-.start_supptext {
-  color: rgb(255 255 255 / 50%);
-  font-weight: 400;
-  text-transform: capitalize;
-  line-height: 24px;
-  text-align: center;
-  margin: 0 0 40px 0;
-}
-
-.hero_title {
-  font-size: 28px;
+.technology_title {
+  font-size: 26px;
   color: #dfb85d;
   text-transform: uppercase;
   text-align: center;
 }
 
-.hero_title::after {
+.technology_title::after {
   content: "";
   display: flex;
   width: 80%;
@@ -42,42 +23,13 @@
   border-bottom: 2px solid #e90000;
 }
 
-.more_padding {
-  padding: 80px 0;
-}
-
-.more_title {
-  background-color: #1e1e1e;
-  display: block;
-  padding: 8px 10px;
-  margin: 0 0 20px 0;
-  border-bottom: 3px solid #dfb85d;
-  font-weight: 800;
-  color: rgb(255, 255, 255);
-}
-
-.footer_contacts_background {
-  background-color: #1e1e1e;
-  padding: 20px;
-  margin: 0 0 10px 0;
-}
-
-.more_contacts_list:not(:first-child) {
-  margin: 20px 0 0 0;
-}
-
-.more_contacts_list::after {
-  content: "";
-  display: flex;
-  width: 100%;
-  border-bottom: 1px dashed rgb(255 255 255 / 50%);
-}
-
-.footer_contacts {
-  display: flex;
-  margin: 0 0 10px 0;
-  align-items: flex-start;
-  color: rgb(255, 255, 255);
+.technology_text {
+  line-height: 1.5;
+  color: rgb(255 255 255 / 70%);
+  margin: 0 0 40px 0;
+  text-align: center;
+  width: 70%;
+  margin: 0 auto 60px auto;
 }
 
 .technology_button {
@@ -91,6 +43,202 @@
   display: block;
 }
 
+@media screen and (min-width: 970px) {
+  .technology_button {
+    padding: 15px 30px;
+  }
+}
+
+.technology_sentence:not(:last-child) {
+  margin: 0 0 10px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .technology_sentence:not(:last-child) {
+    margin: 0 10px 0 0;
+  }
+
+  .technology_sentence {
+    display: flex;
+  }
+}
+
+.technology_category {
+  background-color: #1e1e1eca;
+  border-radius: 8px;
+  padding: 40px 30px 60px 30px;
+}
+
+.technology_category_title {
+  color: #dfb85d;
+}
+
+.technology_list {
+  margin: 0 0 60px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .technology_list {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.resource_sentence_box {
+  margin: 0 0 20px 0;
+  width: 100%;
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence_box {
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1165px) {
+  .resource_sentence_box {
+    justify-content: space-between;
+  }
+}
+
+.resource_sentence {
+  display: flex;
+  flex-direction: column;
+  background-color: #1e1e1eca;
+  padding: 60px 15px;
+  border-radius: 8px;
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence {
+    padding: 60px 30px;
+  }
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence {
+    width: 40%;
+  }
+
+  .resource_sentence:last-child {
+    width: 100%;
+    margin: 0;
+  }
+}
+
+.resource_sentence:not(:last-child) {
+  margin: 0 0 20px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .resource_sentence:not(:last-child) {
+    margin: 0 0 20px 0;
+  }
+}
+
+@media screen and (min-width: 1165px) {
+  .resource_sentence {
+    padding: 60px 35px;
+  }
+}
+
+.resource_sentence_box_img {
+  border: #dfb85d solid 3px;
+  border-radius: 50%;
+  padding: 20px;
+  margin: 0 auto 20px auto;
+}
+
+.resource_sentence_img {
+  width: 80px;
+  opacity: 20%;
+}
+
+.resource_sentence_box_title {
+  color: rgb(255 255 255 / 80%);
+  text-align: center;
+  line-height: 1.5;
+}
+
+.resource_sentence_title {
+  font-weight: 800;
+  color: #fff;
+}
+
+.technology_text_support {
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.5;
+  color: rgb(255 255 255 / 70%);
+  margin: 80px 0 40px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .technology_text_support {
+    width: 70%;
+    margin: 0 0 40px 0;
+  }
+}
+
+.more_title {
+  background-color: #1e1e1e;
+  display: block;
+  padding: 8px 10px;
+  margin: 0 0 20px 0;
+  border-bottom: 3px solid #dfb85d;
+  font-weight: 800;
+  color: rgb(255, 255, 255);
+}
+
+.more_contacts_list:not(:first-child) {
+  margin: 20px 0 0 0;
+}
+
+.more_contacts_list::after {
+  content: "";
+  display: flex;
+  width: 100%;
+  border-bottom: 1px dashed rgb(255 255 255 / 50%);
+}
+
+.more_padding {
+  padding: 80px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .more_padding {
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 970px) {
+  .more_desktop {
+    display: none;
+  }
+}
+
+.technology_button_get {
+  background-color: #e90000;
+  color: #fff;
+  width: 100%;
+  padding: 15px 0;
+  font-weight: 800;
+  border-radius: 4px;
+  margin: 0 auto;
+  display: block;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 970px) {
+  .technology_button_get {
+    width: 100%;
+    margin: 0 auto 0 0;
+  }
+}
+
 .postcards_background {
   background-color: #1e1e1e;
 }
@@ -98,4 +246,111 @@
 .postcards_img {
   margin: 0 auto;
   display: block;
+}
+
+@media screen and (min-width: 970px) {
+  .sales_desktop {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .sales_desktop_menu {
+    width: 28.5%;
+  }
+}
+
+.menu_sentence:not(:last-child) {
+  margin: 0 0 20px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .menu_sentence {
+    width: 100%;
+  }
+}
+
+.menu_button {
+  background-color: #e90000;
+  color: #fff;
+  width: 100%;
+  padding: 15px 0;
+  font-weight: 800;
+  border-radius: 4px;
+  margin: 0 auto;
+  display: block;
+}
+
+@media screen and (min-width: 970px) {
+  .menu_button {
+    width: inherit;
+  }
+}
+
+.resource_cicle_sentence_text_final {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 1.4;
+  margin: 0 auto 20px auto;
+  text-align: center;
+  width: 90%;
+}
+
+.resource_cicle_sentence_supptext_final {
+  color: #dfb85d;
+  font-size: 24px;
+  font-weight: 800;
+}
+
+.about_supptitle {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 28px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 0 40px 0;
+}
+
+.about_svg {
+  transform: rotate(90deg);
+}
+
+.form_input_name {
+  border: solid 2px rgb(255 255 255 / 30%);
+  border-radius: 4px;
+  padding: 10px;
+  color: #fff;
+  margin: 0 0 30px 0;
+  width: -webkit-fill-available;
+}
+
+.form_input_select {
+  border: solid 2px rgb(255 255 255 / 30%);
+  border-radius: 4px;
+  padding: 10px;
+  color: #fff;
+  margin: 0 0 30px 0;
+  width: -webkit-fill-available;
+}
+
+.form_title {
+  line-height: 1.5;
+  color: #dfb85d;
+  margin: 0 0 30px 0;
+}
+
+.form_text {
+  line-height: 1.5;
+  color: rgb(255 255 255 / 70%);
+}
+
+.form_checkbox_box {
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 30px 0;
+}
+
+.form_checkbox {
+  padding: 5px;
 }
