--- a/css/learn.css
+++ b/css/learn.css
@@ -297,7 +297,7 @@
   border: solid 2px rgb(255 255 255 / 30%);
   border-radius: 4px;
   padding: 10px;
-  color: #fff;
+  color: rgb(255 255 255 / 30%);
   margin: 0 0 30px 0;
   width: -webkit-fill-available;
 }
@@ -306,7 +306,7 @@
   border: solid 2px rgb(255 255 255 / 30%);
   border-radius: 4px;
   padding: 10px;
-  color: #fff;
+  color: rgb(255 255 255 / 30%);
   margin: 0 0 30px 0;
   width: -webkit-fill-available;
 }
@@ -353,11 +353,17 @@
 
 .about_supptitle {
   color: rgba(255, 255, 255, 0.5);
-  font-size: 28px;
+  font-size: 18px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 0 40px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .about_supptitle {
+    font-size: 28px;
+  }
 }
 
 .about_svg {
@@ -368,10 +374,18 @@
   display: flex;
   flex-direction: column;
   background-color: #000;
-  padding: 60px 80px 40px 80px;
+  padding: 60px 40px 40px 40px;
   border-radius: 8px;
   margin: 0 0 10px 0;
+  height: 300px;
 }
+
+@media screen and (min-width: 970px) {
+  .resource_cicle_sentence_final {
+    padding: 60px 80px 40px 80px;
+  }
+}
+
 .resource_cicle_sentence_box_img_final {
   margin: 0 auto 20px auto;
 }
@@ -395,14 +409,21 @@
 .resource_cicle_sentence_supptitle_final {
   margin: 0;
 }
-.resource_cicle_sentence_text_final {
-  color: #fff;
-  font-size: 18px;
+
+.resource_cicle_sentence_text_join {
+  font-size: 14px;
   font-weight: 400;
   text-transform: capitalize;
-  line-height: 24px;
-  margin: 0 0 60px 0;
+  line-height: 1.5;
   text-align: center;
+  color: rgb(255 255 255 / 70%);
+  height: 120px;
+}
+
+@media screen and (min-width: 970px) {
+  .resource_cicle_sentence_text_join {
+    font-size: 18px;
+  }
 }
 
 .resource_cicle_sentence_supptext_final {
