--- a/css/start.css
+++ b/css/start.css
@@ -305,11 +305,17 @@
 
 .about_supptitle {
   color: rgba(255, 255, 255, 0.5);
-  font-size: 28px;
+  font-size: 18px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 0 40px 0;
+}
+
+@media screen and (min-width: 970px) {
+  .about_supptitle {
+    font-size: 28px;
+  }
 }
 
 .about_svg {
@@ -320,7 +326,7 @@
   border: solid 2px rgb(255 255 255 / 30%);
   border-radius: 4px;
   padding: 10px;
-  color: #fff;
+  color: rgb(255 255 255 / 30%);
   margin: 0 0 30px 0;
   width: -webkit-fill-available;
 }
@@ -329,7 +335,7 @@
   border: solid 2px rgb(255 255 255 / 30%);
   border-radius: 4px;
   padding: 10px;
-  color: #fff;
+  color: rgb(255 255 255 / 30%);
   margin: 0 0 30px 0;
   width: -webkit-fill-available;
 }
