--- a/css/learn.css
+++ b/css/learn.css
@@ -214,7 +214,7 @@
   padding: 15px 0;
   font-weight: 800;
   border-radius: 4px;
-  margin: 0 auto;
+  margin: 0 auto 40px;
   display: block;
 }
 
